# fast.dashboard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  PUBLISHING.md  README.fastmvc-backup.md  README.md  SECURITY.md  THEME_UPDATE.md  pyproject.toml
.fastmvc/recordings/: 080d991f.json  105d67be.json  17d7d47c.json  1b72287f.json  30342e7e.json  36de7f57.json  7f72d9aa.json  d4e6b32c.json
.fastx/recordings/: 31804f50.json  38cce6a2.json  3b96153a.json  4ead5be8.json  a90c8cc0.json  c32116ca.json  cb34673a.json  d74c3ab1.json  e7f1fa8e.json  ef3b05de.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: ErrorState.tsx  MetricCard.tsx  PageHeader.tsx  StatusDot.tsx
src/: __init__.py  embed_revocation.py  embed_theme.py  taxonomy.py
src/core/: __init__.py  config_reload.py  graphql_generator.py  layout.py  router.py  saga.py  seo.py  time_travel.py
src/fastmvc_dashboards/: __init__.py  embed_signing.py
src/fastx_dashboards/: __init__.py  taxonomy.py
src/operations/: __init__.py
src/providers/: grafana.py  metabase.py
src/secrets/: providers.py
src/workflows/: engine.py
tests/: __init__.py  test_config_reload.py  test_embed_revocation_theme.py  test_embed_signing.py  test_encryption.py  test_graphql_generator.py  test_loose_coupling.py  test_mocks.py  test_nplus1_detector.py  test_providers.py  test_public_api.py  test_registry.py  test_router.py  test_saga.py  test_seo.py  test_smart_cache.py  test_time_travel.py  test_tracing.py
tests/e2e/: __init__.py  test_dashboard_e2e.py
tests/integration/: __init__.py  test_dashboard_integration.py  test_registry_integration.py
(+84 files in other folders)
